--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="pick_image_chooser_title">이미지 선택</string>
     <string name="pick_image_camera">카메라로 촬영하기</string>
     <string name="pick_image_gallery">저장된 이미지 읽어오기</string>
+    <string name="asset_statements" translatable="false">[{ \"include\": \"https://linkedoutapp.com/.well-known/assetlinks.json\" }]</string>
 </resources>
